--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@paigewilliams/react-responsive-navbar": "^1.0.13",
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
+    "dangerous-html": "^0.1.13",
     "ethers": "^5",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-responsive-navbar": "^1.0.11",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
